<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.example.userversion.view.TopBar
            app:title="@string/set"
            app:isRightShow="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <TextView
            android:id="@+id/name_info"
            android:text="@string/setting_success"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="invisible"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:background="@color/green2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </FrameLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/pop_bg"
        >


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/open_fast_mode"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/open_fast_mode_hint"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Switch
            android:id="@+id/sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>