<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <com.example.userversion.view.TopBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:isLeftShow="false"
        app:title="@string/user_terminal"
        app:rightDrawable="@drawable/btn_setting_selector"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_scan"
            android:text="@string/to_scan"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_selector"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btn_register"
            android:text="@string/to_manager"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white"
            android:background="@drawable/btn_blue_selector"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
