<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <com.example.userversion.view.TopBar
            app:title="@string/to_scan"
            app:isRightShow="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <TextView
            android:id="@+id/name_info"
            android:text="@string/warn_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="invisible"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/set_name_to_distingiush"
            style="@style/textGreenStyle"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:minWidth="250dp"
            android:background="@drawable/pop_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_name"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:imeOptions="actionDone"
                android:digits="@string/support"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd"
                android:background="#00000000"
                android:layout_height="50dp" />

            <ImageButton
                android:id="@+id/delete_1"
                android:layout_width="30dp"
                android:background="@drawable/delet_3"
                android:layout_height="30dp"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="25dp"
            >

            <Button
                android:id="@+id/btn_next"
                style="@style/btnStyle"
                android:text="@string/next"
                android:layout_width="150dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />


        </RelativeLayout>


    </LinearLayout>


</LinearLayout>